--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -175,6 +175,31 @@
                 <child>
                   <widget class="GtkMenu" id="view2_menu">
                     <child>
+                      <widget class="GtkRadioMenuItem" id="details-menu-view-console">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">Console</property>
+                        <property name="use_underline">True</property>
+                        <property name="active">True</property>
+                        <property name="draw_as_radio">True</property>
+                        <signal name="toggled" handler="on_details_menu_view_console_toggled"/>
+                      </widget>
+                    </child>
+                    <child>
+                      <widget class="GtkRadioMenuItem" id="details-menu-view-details">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">Details</property>
+                        <property name="use_underline">True</property>
+                        <property name="draw_as_radio">True</property>
+                        <property name="group">details-menu-view-console</property>
+                        <signal name="toggled" handler="on_details_menu_view_details_toggled"/>
+                      </widget>
+                    </child>
+                    <child>
+                      <widget class="GtkSeparatorMenuItem" id="menuitem2">
+                        <property name="visible">True</property>
+                      </widget>
+                    </child>
+                    <child>
                       <widget class="GtkCheckMenuItem" id="details-menu-view-fullscreen">
                         <property name="visible">True</property>
                         <property name="label" translatable="yes">Fullscreen</property>
@@ -226,7 +251,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-view-serial-list">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Consoles</property>
+                        <property name="label" translatable="yes">Text Consoles</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_view_serial_list_activate"/>
                       </widget>
