--- a/src/vmm-manager.glade
+++ b/src/vmm-manager.glade
@@ -280,6 +280,7 @@
                     <property name="visible">True</property>
                     <property name="has_tooltip">True</property>
                     <property name="tooltip" translatable="yes">Show the virtual machine's details</property>
+                    <property name="is_important">True</property>
                     <property name="label" translatable="yes">_Open</property>
                     <property name="use_underline">True</property>
                     <property name="icon_name">icon_console</property>
